@@ -128,11 +128,7 @@ protected:
    //bool set by derived classes to choose whether or not to use the denominator
    bool _has_denominator;
    bool _has_beam;
-   
-   // storage of partitioning information (created after result)
-   std::vector<fastjet::PseudoJet> _jet_partition;
-   fastjet::PseudoJet _beam_partition;
-   
+
    // This constructor allows _has_denominator to be set by derived classes
    MeasureFunction(bool has_denominator = true, bool has_beam = true) : _has_denominator(has_denominator), _has_beam(has_beam) {}
    
@@ -171,11 +167,7 @@ public:
    }
    
    // Create the partitioning and stores internally
-   void set_partition(const std::vector<fastjet::PseudoJet>& particles, const std::vector<fastjet::PseudoJet>& axes);
-   
-   // Return current partitioning information
-   std::vector<fastjet::PseudoJet> jet_partition() const {return _jet_partition;}
-   fastjet::PseudoJet beam_partition() const {return _beam_partition;}
+   std::vector<fastjet::PseudoJet> get_partition(const std::vector<fastjet::PseudoJet>& particles, const std::vector<fastjet::PseudoJet>& axes, PseudoJet * beamPartitionStorage = NULL);
    
    // calculates the tau result using an existing partition
    TauComponents result_from_partition(const std::vector<fastjet::PseudoJet>& jet_partitioning, const std::vector<fastjet::PseudoJet>& axes, PseudoJet * beamPartitionStorage = NULL);
