@@ -26,17 +26,17 @@ beta = 2.0:  One-pass E-Scheme kT Axes
        2.000000      1.293815      0.827980      0.756863      0.639953      0.914107
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Subjets found using beta = 1.0 tau values
-jet #          rap       phi         pt          m          e
-    1      -0.8673    2.9051   983.3873    39.9912  1378.1622
+jet #          rap       phi         pt          m          e    constit
+    1      -0.8673    2.9051   983.3873    39.9912  1378.1622         35
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-jet #          rap       phi         pt          m          e
-    1      -0.7959    2.8213    36.9260     4.1240    49.5577
-    2      -0.8701    2.9084   946.5959    25.7449  1328.6045
+jet #          rap       phi         pt          m          e    constit
+    1      -0.7959    2.8213    36.9260     4.1240    49.5577         14
+    2      -0.8701    2.9084   946.5959    25.7449  1328.6045         21
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-jet #          rap       phi         pt          m          e
-    1      -0.8900    2.9133   149.6693     8.2524   213.2875
-    2      -0.8664    2.9075   796.9288    11.6617  1115.3170
-    3      -0.7959    2.8213    36.9260     4.1240    49.5577
+jet #          rap       phi         pt          m          e    constit
+    1      -0.8900    2.9133   149.6693     8.2524   213.2875         10
+    2      -0.8664    2.9075   796.9288    11.6617  1115.3170         11
+    3      -0.7959    2.8213    36.9260     4.1240    49.5577         14
 -------------------------------------------------------------------------------------
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Axes used for above beta = 1.0 tau values
@@ -66,17 +66,17 @@ beta = 2.0:  One-pass E-Scheme kT Axes
        2.000000      6.953861      3.804487      3.737265      0.547104      0.982331
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Subjets found using beta = 1.0 tau values
-jet #          rap       phi         pt          m          e
-    1       0.2195    6.0349   908.0979    87.7124   934.3868
+jet #          rap       phi         pt          m          e    constit
+    1       0.2195    6.0349   908.0979    87.7124   934.3868         47
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-jet #          rap       phi         pt          m          e
-    1       0.2716    0.3354     8.9852     3.7341    10.0912
-    2       0.2189    6.0294   900.6142    59.5448   924.2956
+jet #          rap       phi         pt          m          e    constit
+    1       0.2716    0.3354     8.9852     3.7341    10.0912         15
+    2       0.2189    6.0294   900.6142    59.5448   924.2956         32
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-jet #          rap       phi         pt          m          e
-    1      -0.1831    5.9784    10.1884     3.5582    10.9733
-    2       0.2239    6.0300   890.4392    28.4501   913.3223
-    3       0.2716    0.3354     8.9852     3.7341    10.0912
+jet #          rap       phi         pt          m          e    constit
+    1      -0.1831    5.9784    10.1884     3.5582    10.9733          8
+    2       0.2239    6.0300   890.4392    28.4501   913.3223         24
+    3       0.2716    0.3354     8.9852     3.7341    10.0912         15
 -------------------------------------------------------------------------------------
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Axes used for above beta = 1.0 tau values
